feat(all): move logic of disputes and investigation to blockchain
